Used a demo app for index.html which depends on usabilla.components

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <title>Usabilla Components</title>
 </head>
-<body ng-app="usabilla.components">
+<body ng-app="app">
     <ub-button text="click"></ub-button>
 
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="dist/usabilla.components.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
