--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <ub-button text="click"></ub-button>
 
     <script src="node_modules/angular/angular.min.js"></script>
-    <script src="dist/usabilla.components.min.js"></script>
+    <script src="dist/usabilla.modules.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
