--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <title>Usabilla Components</title>
+    <link rel="stylesheet" type="text/css" href="dist/ub.modules.min.css">
 </head>
 <body ng-app="app">
     <ub-button text="click"></ub-button>
 
     <script src="node_modules/angular/angular.min.js"></script>
-    <script src="dist/usabilla.modules.min.js"></script>
+    <script src="dist/ub.modules.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
