--- a/example/index.html
+++ b/example/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <title>Usabilla Components</title>
-    <link rel="stylesheet" type="text/css" href="../dist/ub.components.min.css">
+    <link rel="stylesheet" type="text/css" href="../dist/components/button/ub.button.min.css">
 </head>
 <body ng-app="app">
     <ub-button text="click"></ub-button>
 
     <script src="../node_modules/angular/angular.min.js"></script>
-    <script src="../dist/ub.components.min.js"></script>
+    <script src="../dist/components/button/ub.button.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
