--- a/example/index.html
+++ b/example/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Usabilla Components</title>
-    <link rel="stylesheet" type="text/css" href="../dist/components/button/ub.button.css">
+    <title>Termites</title>
+    <link rel="stylesheet" type="text/css" href="../dist/abutton/abutton.css">
 </head>
 <body ng-app="app">
-    <ub-button text="click"></ub-button>
+    <abutton text="click"></abutton>
 
     <script src="../node_modules/angular/angular.min.js"></script>
-    <script src="../dist/components/button/ub.button.js"></script>
+    <script src="../dist/abutton/abutton.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
